--- a/Object_detection_using_pytorch_fasterRCNN.ipynb
+++ b/Object_detection_using_pytorch_fasterRCNN.ipynb
@@ -35,6 +35,15 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "**Getting the data**"
+      ],
+      "metadata": {
+        "id": "Vc8lHnHq7tsU"
+      }
+    },
+    {
       "cell_type": "code",
       "execution_count": 5,
       "metadata": {
@@ -5096,6 +5105,15 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "**Making Directories to store the info**"
+      ],
+      "metadata": {
+        "id": "OlZj6D-67x3I"
+      }
+    },
+    {
       "cell_type": "code",
       "execution_count": 7,
       "metadata": {
@@ -5129,8 +5147,8 @@
         "  os.mkdir('/content/Eternal_Robotics/Train_labels.csv')\n",
         "if not os.path.exists('/content/Eternal_Robotics/outputs'):\n",
         "  os.mkdir('/content/Eternal_Robotics/outputs')\n",
-        "if not os.path.exists('/content/Eternal_Robotics/src'):\n",
-        "  os.mkdir('/content/Eternal_Robotics/src')\n",
+        "#if not os.path.exists('/content/Eternal_Robotics/src'):\n",
+        "  #os.mkdir('/content/Eternal_Robotics/src')\n",
         "if not os.path.exists('/content/Eternal_Robotics/src'):\n",
         "  os.mkdir('/content/Eternal_Robotics/src')\n",
         "if not os.path.exists('/content/Eternal_Robotics/test_data'):\n",
@@ -5159,6 +5177,7 @@
         }
       ],
       "source": [
+        "#Validating and splitting the data\n",
         "%cd /content/md-datasets-cache-zipfiles-prod.s3.eu-west-1.amazonaws.com/Safety Helmet Wearing Dataset\n",
         "import os\n",
         "import shutil\n",
@@ -5286,8 +5305,8 @@
         "distict_labels = sorted(distict_labels)\n",
         "\n",
         "#label 0 is set for background\n",
-        "lab_to_val = {j:i+1 for i,j in enumerate(distict_labels)}\n",
-        "val_to_lab = {i+1:j for i,j in enumerate(distict_labels)}\n",
+        "#lab_to_val = {j:i+1 for i,j in enumerate(distict_labels)}\n",
+        "#val_to_lab = {i+1:j for i,j in enumerate(distict_labels)}\n",
         "\n",
         "num_classes = len(distict_labels) + 1\n",
         "\n",
@@ -5296,6 +5315,15 @@
         "print(np.unique(np.array(all_labels), return_counts=True)[1])\n",
         "print(num_classes)"
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "#Configration"
+      ],
+      "metadata": {
+        "id": "P0Pt6BTm8YSf"
+      }
     },
     {
       "cell_type": "code",
@@ -5327,6 +5355,15 @@
         "SAVE_MODEL_EPOCH = 2 # save model after these many epochs\n",
         "\n"
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "**Utility code**"
+      ],
+      "metadata": {
+        "id": "J3Yr9RTb8i98"
+      }
     },
     {
       "cell_type": "code",
@@ -5381,6 +5418,15 @@
         "    \"\"\"\n",
         "    return tuple(zip(*batch))"
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "**The Training and Validation Augmentations**"
+      ],
+      "metadata": {
+        "id": "vP9hwRaW8vPa"
+      }
     },
     {
       "cell_type": "code",
@@ -5444,6 +5490,15 @@
         "            cv2.waitKey(0)\n",
         "            cv2.destroyAllWindows()"
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "#Preparing the Dataset"
+      ],
+      "metadata": {
+        "id": "l9FfpP7L87E8"
+      }
     },
     {
       "cell_type": "code",
@@ -5564,6 +5619,15 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "#Creating the Data Loaders"
+      ],
+      "metadata": {
+        "id": "Yca-AKCo9GLQ"
+      }
+    },
+    {
       "cell_type": "code",
       "execution_count": 18,
       "metadata": {
@@ -5607,6 +5671,15 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "#The Faster RCNN Model"
+      ],
+      "metadata": {
+        "id": "wbyraeY59UaQ"
+      }
+    },
+    {
       "cell_type": "code",
       "execution_count": 19,
       "metadata": {
@@ -5641,6 +5714,15 @@
         "import time\n",
         "plt.style.use('ggplot')"
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "#The Training Function"
+      ],
+      "metadata": {
+        "id": "Z1Nn6d219fpd"
+      }
     },
     {
       "cell_type": "code",
@@ -5680,6 +5762,15 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "#The Validation Function"
+      ],
+      "metadata": {
+        "id": "NmZm-QIi9kzy"
+      }
+    },
+    {
       "cell_type": "code",
       "execution_count": 22,
       "metadata": {
@@ -5715,12 +5806,21 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "#Training"
+      ],
+      "metadata": {
+        "id": "ezyl5AUC9t8a"
+      }
+    },
+    {
       "cell_type": "code",
       "execution_count": 23,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 450,
+          "height": 430,
           "referenced_widgets": [
             "f8515a41803243fa8e49c4429790b7d4",
             "1172bcfffefb4a3ca296fbf2f65ffb23",
@@ -5913,6 +6013,15 @@
         "        \n",
         "  plt.close('all')"
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "#Running Inferene using the Trained Faster RCNN Model"
+      ],
+      "metadata": {
+        "id": "Dn2Gs4Bb9xg1"
+      }
     },
     {
       "cell_type": "code",
@@ -6201,6 +6310,15 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "#Looping Over the Image Paths and Carrying Out Inference"
+      ],
+      "metadata": {
+        "id": "NsdL3M4394hr"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
         "for i in range(len(test_images)):\n",
@@ -6313,7 +6431,6 @@
     }
   ],
   "metadata": {
-    "accelerator": "GPU",
     "colab": {
       "collapsed_sections": [],
       "name": "Object_detection_using_pytorch_fasterRCNN.ipynb",
