--- a/Object_detection_using_pytorch_fasterRCNN.ipynb
+++ b/Object_detection_using_pytorch_fasterRCNN.ipynb
@@ -5467,28 +5467,28 @@
       },
       "outputs": [],
       "source": [
-        "def show_tranformed_image(train_loader):\n",
+        "#def show_tranformed_image(train_loader):\n",
         "    \"\"\"\n",
         "    This function shows the transformed images from the `train_loader`.\n",
         "    Helps to check whether the tranformed images along with the corresponding\n",
         "    labels are correct or not.\n",
         "    Only runs if `VISUALIZE_TRANSFORMED_IMAGES = True` in config.py.\n",
         "    \"\"\"\n",
-        "    if len(train_loader) > 0:\n",
-        "        for i in range(1):\n",
-        "            images, targets = next(iter(train_loader))\n",
-        "            images = list(image.to(DEVICE) for image in images)\n",
-        "            targets = [{k: v.to(DEVICE) for k, v in t.items()} for t in targets]\n",
-        "            boxes = targets[i]['boxes'].cpu().numpy().astype(np.int32)\n",
-        "            sample = images[i].permute(1, 2, 0).cpu().numpy()\n",
-        "            for box in boxes:\n",
-        "                cv2.rectangle(sample,\n",
-        "                            (box[0], box[1]),\n",
-        "                            (box[2], box[3]),\n",
-        "                            (0, 0, 255), 2)\n",
-        "            cv2.imshow('Transformed image', sample)\n",
-        "            cv2.waitKey(0)\n",
-        "            cv2.destroyAllWindows()"
+        "    #if len(train_loader) > 0:\n",
+        "        #for i in range(1):\n",
+        "            #images, targets = next(iter(train_loader))\n",
+        "            #images = list(image.to(DEVICE) for image in images)\n",
+        "            #targets = [{k: v.to(DEVICE) for k, v in t.items()} for t in targets]\n",
+        "            #boxes = targets[i]['boxes'].cpu().numpy().astype(np.int32)\n",
+        "            #sample = images[i].permute(1, 2, 0).cpu().numpy()\n",
+        "            #for box in boxes:\n",
+        "                #cv2.rectangle(sample,\n",
+        "                            #(box[0], box[1]),\n",
+        "                            #(box[2], box[3]),\n",
+        "                            #(0, 0, 255), 2)\n",
+        "            #cv2.imshow('Transformed image', sample)\n",
+        "            #cv2.waitKey(0)\n",
+        "            #cv2.destroyAllWindows()"
       ]
     },
     {
